<resources>
    <string name="app_name">RepresentU</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">JHED</string>
    <string name="nav_header_sga_title">SGA</string>
    <string name="nav_header_sga_subtitle">Admin Account</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="settings">Settings</string>
    <string name="feed">Your Feed</string>
    <string name="meet_sga">Meet Your SGA</string>
    <string name="edit_sga">Edit SGA</string>
    <string name="logout_confirm">Are you sure you want to log out?</string>
    <string name="manage">Manage Issues</string>
    <string name="logout">Log out</string>
    <string name="login">Welcome to RepresentU!</string>
    <string name="add_issue">Add Issue</string>
    <string name="change_pass">Change Password</string>
    <string name="yay">Yea</string>
    <string name="nay">Nay</string>
    <string name="delete_confirm">Are you sure you want to delete this issue?</string>
    <string name="remove_confirm">Are you sure you want to remove this member?</string>
    <string name="cp_confirm">Are you sure you want to change your password?</string>
    <string name="cp_title">"Change Admin Password"</string>
    <!-- Strings related to login -->
    <string name="prompt_email">JHU Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="statistics">Statistics</string>
    <string name="stats_intro">This issue\'s statistics:</string>
    <string name="title_activity_user_feed">Your Feed</string>
    <string name="title_activity_sga">Your Feed</string>
    <string name="saveButton">Add</string>
    <string name="issue_title">Issue Title</string>
    <string name="issue_summary">Issue Summary</string>
    <string name="summary">Summary</string>
    <string name="delete">Delete</string>
    <string name="title_activity_user_statistics">Issue Statistics</string>
    <string name="title_activity_meet_your_sga">MeetYourSGAActivity</string>
    <string name="title_activity_sgamember">SGAMemberActivity</string>
    <string name="title_activity_sgastatistics">SGAStatisticsActivity</string>
    <string name="title_activity_issue_statistics">IssueStatisticsActivity</string>
</resources>
