<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/feed"
            app:autoSizeTextType="uniform"
            android:textColor="@color/colorPrimary"
            android:id="@+id/sgaFeed"
            />
        <item
            android:title="@string/manage"
            app:autoSizeTextType="uniform"
            android:textColor="@color/colorPrimary"
            android:id="@+id/manageIssues"
            />
        <item
            android:title="@string/statistics"
            app:autoSizeTextType="uniform"
            android:textColor="@color/colorPrimary"
            android:id="@+id/stats"
            />
        <item
            android:title="@string/edit_sga"
            app:autoSizeTextType="uniform"
            android:textColor="@color/colorPrimary"
            android:id="@+id/editSGA"
            />
        <item
            android:title="@string/settings"
            app:autoSizeTextType="uniform"
            android:textColor="@color/colorPrimary"
            android:id="@+id/settingsSGA"
            />
        <item
            android:title="@string/logout"
            app:autoSizeTextType="uniform"
            android:textColor="@color/colorPrimary"
            android:id="@+id/logout"
            />
        <item
            android:title="@string/change_pass"
            app:autoSizeTextType="uniform"
            android:textColor="@color/colorPrimary"
            android:id="@+id/changePassword"
            />
    </group>


</menu>
