<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/feed"
            android:textColor="@color/colorPrimary"
            android:id="@+id/userFeed"
            />
        <item
            android:title="@string/meet_sga"
            android:textColor="@color/colorPrimary"
            android:id="@+id/meet_your_sga"
            />
        <item
            android:title="@string/settings"
            android:textColor="@color/colorPrimary"
            android:id="@+id/settingsUser"
            />
        <item
            android:title="@string/logout"
            android:textColor="@color/colorPrimary"
            android:id="@+id/logout"
            />
        <item
            android:title="@string/change_pass"
            android:textColor="@color/colorPrimary"
            android:id="@+id/changePassword"
            />
    </group>

</menu>
