<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:contentDescription="@string/nav_header_desc"
        android:cropToPadding="true"
        android:paddingTop="0dp"
        app:srcCompat="@drawable/hopkins" />

    <TextView
        android:id="@+id/jhed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingTop="0dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/nav_header_sga_title"
        android:visibility="visible" />

    <TextView
        android:id="@+id/admin_acount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingTop="0dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:visibility="visible"
        android:text="@string/nav_header_sga_subtitle" />

</LinearLayout>
