<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/summary_text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IssuesSGAActivity">

    <Button
        android:id="@+id/yay_sga"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:text="@string/yay"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toStartOf="@+id/nay_sga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/nay_sga"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/nay"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/yay_sga"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/summary"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yay_sga" />

    <TextView
        android:id="@+id/sga_issue_summary"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:drawableTop="@color/colorPrimaryDark"
        android:gravity="top|left"
        android:lines="100"
        android:minHeight="100dp"
        android:minLines="5"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="normal"
        app:autoSizeMinTextSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/nay_sga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mock_pic" />

    <TextView
        android:id="@+id/comments_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="2"
        android:autoSizeMaxTextSize="24sp"
        android:autoSizeMinTextSize="18sp"
        android:autoSizeTextType="uniform"
        android:lineSpacingExtra="8sp"
        android:lines="1"
        android:maxLines="1"
        android:minHeight="20dp"
        android:padding="5dp"
        android:text="Comments"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@id/sga_issue_summary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sga_issue_summary"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/comment_section_user"
        android:layout_width="389dp"
        android:layout_height="395dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comments_user"
        app:layout_optimizationLevel="dimensions" />

</android.support.constraint.ConstraintLayout>