<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autoSizeTextType="uniform"
    android:clipToPadding="false"
    android:fillViewport="true"
    tools:context=".IssueVotingActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform">

        <LinearLayout
            android:id="@+id/layout_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:orientation="vertical"
            android:weightSum="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toTopOf="@+id/nay_sga"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/mock_pic" />

            <LinearLayout
                android:id="@+id/button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintBottom_toTopOf="@+id/info_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4"
                app:layout_constraintVertical_chainStyle="packed">

                <Button
                    android:id="@+id/yay_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoSizeMaxTextSize="22sp"
                    android:autoSizeMinTextSize="14sp"
                    android:autoSizeTextType="uniform"
                    android:background="@color/colorAccent"
                    android:text="@string/yay"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/yay_user"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/nay_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoSizeMaxTextSize="22sp"
                    android:autoSizeMinTextSize="14sp"
                    android:autoSizeTextType="uniform"
                    android:background="@color/colorPrimary"
                    android:text="@string/nay"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/yay_user"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:orientation="vertical"
                android:weightSum="5"
                app:layout_constraintBottom_toTopOf="@+id/title_summary_user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4">

                <TextView
                    android:id="@+id/title_summary_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="2"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="18sp"
                    android:autoSizeTextType="uniform"
                    android:lines="1"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="@string/summary"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintBottom_toTopOf="@+id/user_issue_summary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_layout"
                    app:layout_constraintVertical_bias="0.0" />


                <TextView
                    android:id="@+id/user_issue_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:autoSizeMaxTextSize="20sp"
                    android:autoSizeMinTextSize="18sp"
                    android:autoSizeTextType="uniform"
                    android:drawableTop="@color/colorPrimaryDark"
                    android:gravity="top|start"
                    android:maxLines="100"
                    android:padding="5dp"
                    android:text="@string/summary"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toTopOf="@+id/comments_user"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_summary_user" />

                <TextView
                    android:id="@+id/comments_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="200dp"
                    android:layout_weight="2"
                    android:autoSizeMaxTextSize="24sp"
                    android:autoSizeMinTextSize="18sp"
                    android:autoSizeTextType="uniform"
                    android:lineSpacingExtra="8sp"
                    android:lines="1"
                    android:maxLines="1"
                    android:minHeight="20dp"
                    android:padding="5dp"
                    android:text="Comments"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_issue_summary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/comment_section_user"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="2"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comments_user"
                app:layout_constraintVertical_bias="1.0" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>